2005-06-26    <jeff@mini.nerble.net>

	* mapedit/shapelst.cc,etc:  Rewrote shape-browser renderer so
	scrolling works correctly.

2005-06-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/spiked_shield.shp: fixed transparency, added back by Crysta

2005-06-16  Tristan Tarrant <nadir@users.sourceforge.net>
	* files/rwregress.cc: removed use of deprecated strstream and
	  used sstream instead

2005-06-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* audio/Midi.cc: fix crash on exit when midi is disabled
	* data/bg/faces.shp: new Julia face by Berty Zhang
	* data/bg/gorget.shp: updated gorgets/collars by Crysta

2005-06-15  Ryan Nunn  <colourles@users.sourceforge.net>
	* game.cc : Set 'game_type' to NONE when in the Exult Menu
	* audio/midi_drivers/XMidiSequence.cpp, audio/midi_drivers/XMidiFile.*,
	  audio/midi_drivers/LowLevelMidiDriver.* : Improvements and fixes for 
	  when using Exult with a Real MT32 (avoiding Buffer Overflows and 
	  pauses)

2005-06-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* sigame.cc, bggame.cc: more constants from flex headers

2005-06-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/various: new art by 'Crysta the Elf'
	* sigame.cc, bggame.cc: use constants from headers instead of fixed numbers

2005-06-13  Ryan Nunn  <colourles@users.sourceforge.net>
	* audio/midi/TimidityMidiDriver.cpp : Report Timidity Error messages
	  if initiliaztion fails
	* audio/midi_drivers/FluidSynthMidiDriver.*, 
	  audio/midi_drivers/Makefile.am, audio/midi_drivers/MidiDriver.cpp : 
	  New FluidSynthMidiDriver borrowed from ScummVM. Needs FluidSynth to 
	  work (obviously). Define USE_FLUIDSYNTH_MIDI to compile it in.
	  
2005-06-13  Tristan Tarrant <nadir@users.sourceforge.net>
	* mouse.h: include gamewin.h
	* audio/midi_drivers/Makefile.am: add include path so it can find flags.h
	* audio/midi_drivers/XMidiFile.cpp: make it compile on 64bit
